# sparse-map

./: CMakeLists.txt  README.md  tsl-sparse-map.natvis
.github/workflows/: ci.yml
include/Dice/sparse-map/: boost_offset_pointer.h  boost_offset_pointer.hpp  sparse_growth_policy.h  sparse_hash.h  sparse_hash.hpp  sparse_map.h  sparse_map.hpp  sparse_set.h  sparse_set.hpp
include/tsl/: const_cast.hpp  detail_popcount.hpp  sparse_array.hpp.old  sparse_array2.hpp  sparse_hash.h  sparse_hash2.hpp  template_parameters.hpp  utility_functions.hpp
test_package/: example.cpp
tests/: CMakeLists.txt  custom_allocator_tests.cpp  policy_tests.cpp  popcount_tests.cpp  sparse_map_tests.cpp  sparse_set_tests.cpp
tests/fancy_pointer/: CustomAllocator.h  main.cpp  sparse_array_tests.cpp  sparse_hash_map_tests.cpp  sparse_hash_set_tests.cpp  sparse_hash_tests.cpp
tests/scoped_allocator_adaptor/: sparse_array_tests.cpp  sparse_hash_set_tests.cpp  sparse_hash_tests.cpp
